--- a/Pree/MainWindow.xaml
+++ b/Pree/MainWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="Pree.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Pree.MainWindow"
         Title="Pree" Height="350" Width="525"
         DataContext="{Binding Recorder, Source={StaticResource Locator}}"
         Closing="Window_Closing">
@@ -14,17 +15,54 @@
             <ColumnDefinition Width="257*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="60*"/>
-            <RowDefinition Height="58*"/>
-            <RowDefinition Height="62*"/>
-            <RowDefinition Height="139*"/>
+            <RowDefinition Height="94*"/>
+            <RowDefinition Height="61*"/>
+            <RowDefinition Height="57*"/>
+            <RowDefinition Height="55*"/>
+            <RowDefinition Height="40*"/>
         </Grid.RowDefinitions>
-        <Button Content="Start" Command="{Binding Start}" Margin="6"/>
-        <Button Content="Stop" Command="{Binding Stop}" Grid.Column="1" Margin="6"/>
-        <Button Content="Record" Command="{Binding Record}" Grid.Row="1" Grid.RowSpan="2" Margin="6"/>
-        <Button Content="Keep" Grid.Row="1" Command="{Binding Keep}" Grid.Column="1" Margin="6"/>
-        <Button Grid.Row="2" Content="Discard" Command="{Binding Discard}" Grid.Column="1" Margin="6"/>
-        <TextBlock Grid.Row="3" Text="{Binding Amplitude}" Margin="6"/>
-        <TextBlock Text="{Binding ElapsedTime}" Grid.Column="1" Margin="6" Grid.Row="3" />
+        <ListBox Margin="6" ItemsSource="{Binding Devices}" SelectedItem="{Binding SelectedDevice}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Column="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="83"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Bits" Margin="6"/>
+                <ComboBox SelectedValue="{Binding BitsPerSample}" Grid.Column="1" Margin="6">
+                    <System:Int32>16</System:Int32>
+                    <System:Int32>24</System:Int32>
+                    <System:Int32>32</System:Int32>
+                </ComboBox>
+            </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="83"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Sample Rate" Margin="6"/>
+                <ComboBox SelectedValue="{Binding SampleRate}" Grid.Column="1" Margin="6">
+                    <System:Int32>8000</System:Int32>
+                    <System:Int32>11025</System:Int32>
+                    <System:Int32>16000</System:Int32>
+                    <System:Int32>22050</System:Int32>
+                    <System:Int32>44100</System:Int32>
+                    <System:Int32>48000</System:Int32>
+                </ComboBox>
+            </Grid>
+        </StackPanel>
+        <Button Content="Start" Command="{Binding Start}" Margin="6" Grid.Row="1"/>
+        <Button Content="Stop" Command="{Binding Stop}" Grid.Column="1" Margin="6" Grid.Row="1"/>
+        <Button Content="Record" Command="{Binding Record}" Grid.Row="2" Grid.RowSpan="2" Margin="6"/>
+        <Button Content="Keep" Grid.Row="2" Command="{Binding Keep}" Grid.Column="1" Margin="6"/>
+        <Button Grid.Row="3" Content="Discard" Command="{Binding Discard}" Grid.Column="1" Margin="6"/>
+        <TextBlock Grid.Row="4" Text="{Binding Amplitude}" Margin="6"/>
+        <TextBlock Text="{Binding ElapsedTime}" Grid.Column="1" Margin="6" Grid.Row="4" />
     </Grid>
 </Window>
