--- a/Pree/MainWindow.xaml
+++ b/Pree/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Pree.MainWindow"
-        Title="Pree" Height="350" Width="525"
+        Title="Pree" Height="383" Width="525"
         DataContext="{Binding Recorder, Source={StaticResource Locator}}"
         Closing="Window_Closing">
     <Window.InputBindings>
@@ -15,11 +15,11 @@
             <ColumnDefinition Width="257*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="94*"/>
+            <RowDefinition Height="104*"/>
+            <RowDefinition Height="68*"/>
+            <RowDefinition Height="63*"/>
             <RowDefinition Height="61*"/>
-            <RowDefinition Height="57*"/>
-            <RowDefinition Height="55*"/>
-            <RowDefinition Height="40*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <ListBox Margin="6" ItemsSource="{Binding Devices}" SelectedItem="{Binding SelectedDevice}">
             <ListBox.ItemTemplate>
@@ -63,6 +63,6 @@
         <Button Content="Keep" Grid.Row="2" Command="{Binding Keep}" Grid.Column="1" Margin="6"/>
         <Button Grid.Row="3" Content="Discard" Command="{Binding Discard}" Grid.Column="1" Margin="6"/>
         <TextBlock Grid.Row="4" Text="{Binding Amplitude}" Margin="6"/>
-        <TextBlock Text="{Binding ElapsedTime}" Grid.Column="1" Margin="6" Grid.Row="4" />
+        <TextBlock Text="{Binding ElapsedTime}" FontSize="42" Grid.Column="1" Margin="6" Grid.Row="4" />
     </Grid>
 </Window>
