--- a/Pree/MainWindow.xaml
+++ b/Pree/MainWindow.xaml
@@ -1,68 +1,24 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Pree.MainWindow"
-        Title="Pree" Height="383" Width="525"
-        DataContext="{Binding Recorder, Source={StaticResource Locator}}"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
+        xmlns:v="clr-namespace:Pree.Views"
+        xmlns:vm="clr-namespace:Pree.ViewModels"
+        x:Class="Pree.MainWindow"
+        Title="Pree" Height="437" Width="525"
+        DataContext="{Binding Main, Source={StaticResource Locator}}"
         Closing="Window_Closing">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:StartViewModel}">
+            <v:StartView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:RecordViewModel}">
+            <v:RecordView />
+        </DataTemplate>
+    </Window.Resources>
     <Window.InputBindings>
         <KeyBinding Command="{Binding RecordOrKeep}" Key="PageDown"/>
         <KeyBinding Command="{Binding Discard}" Key="PageUp"/>
     </Window.InputBindings>
-    <Grid Margin="6">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="260*"/>
-            <ColumnDefinition Width="257*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="104*"/>
-            <RowDefinition Height="68*"/>
-            <RowDefinition Height="63*"/>
-            <RowDefinition Height="61*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <ListBox Margin="6" ItemsSource="{Binding Devices}" SelectedItem="{Binding SelectedDevice}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Name}"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <StackPanel Grid.Column="1">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="83"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Bits" Margin="6"/>
-                <ComboBox SelectedValue="{Binding BitsPerSample}" Grid.Column="1" Margin="6">
-                    <System:Int32>16</System:Int32>
-                    <System:Int32>24</System:Int32>
-                    <System:Int32>32</System:Int32>
-                </ComboBox>
-            </Grid>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="83"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Sample Rate" Margin="6"/>
-                <ComboBox SelectedValue="{Binding SampleRate}" Grid.Column="1" Margin="6">
-                    <System:Int32>8000</System:Int32>
-                    <System:Int32>11025</System:Int32>
-                    <System:Int32>16000</System:Int32>
-                    <System:Int32>22050</System:Int32>
-                    <System:Int32>44100</System:Int32>
-                    <System:Int32>48000</System:Int32>
-                </ComboBox>
-            </Grid>
-        </StackPanel>
-        <Button Content="Start" Command="{Binding Start}" Margin="6" Grid.Row="1"/>
-        <Button Content="Stop" Command="{Binding Stop}" Grid.Column="1" Margin="6" Grid.Row="1"/>
-        <Button Content="Record" Command="{Binding Record}" Grid.Row="2" Grid.RowSpan="2" Margin="6"/>
-        <Button Content="Keep" Grid.Row="2" Command="{Binding Keep}" Grid.Column="1" Margin="6"/>
-        <Button Grid.Row="3" Content="Discard" Command="{Binding Discard}" Grid.Column="1" Margin="6"/>
-        <TextBlock Text="{Binding ElapsedTime}" FontSize="42" Grid.Column="1" Margin="6" Grid.Row="4" />
-        <ProgressBar Grid.Row="4" Margin="6" VerticalAlignment="Top" Height="10" Maximum="1" Value="{Binding Amplitude, Mode=OneWay}"/>
-    </Grid>
+    <ContentPresenter Content="{Binding Content}" ContentTemplateSelector="{StaticResource ViewSelector}"/>
 </Window>
