--- a/Pree/Views/StartView.xaml
+++ b/Pree/Views/StartView.xaml
@@ -44,5 +44,6 @@
             </StackPanel>
         </StackPanel>
 
+        <Button Command="{Binding Help}" Width="20" Height="20" Margin="0,0,6,0" Content="?" HorizontalAlignment="Right" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
