--- a/Pree/Views/RecordView.xaml
+++ b/Pree/Views/RecordView.xaml
@@ -19,6 +19,7 @@
             </StackPanel>
             <ProgressBar Maximum="1" Value="{Binding Amplitude, Mode=OneWay}" HorizontalAlignment="Left" Width="24" Height="100" VerticalAlignment="Top" Orientation="Vertical" Margin="6"/>
         </StackPanel>
+        <TextBlock Text="{Binding LastError}" HorizontalAlignment="Center" Foreground="#FFC50505" FontSize="16" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Button Content="Keep" Command="{Binding Keep}" HorizontalAlignment="Left" Width="100" Height="100" VerticalAlignment="Top" Margin="6"/>
             <Button Content="Discard" Command="{Binding Discard}" HorizontalAlignment="Left" Width="100" Height="100" VerticalAlignment="Top" Margin="6"/>
